--- a/templates/nav.html
+++ b/templates/nav.html
@@ -9,11 +9,11 @@
                     </div>
                     <a href="#" data-activates="mobile-demo" class="side-nav-trigger button-collapse"><i class="material-icons">menu</i></a>
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
-                        <li><a href="{{url_for('trips')}}">Trips</a></li>
-                        <li><a href="#">New Trip</a></li>
-                        <li><a href="{{url_for('ski_resorts')}}">Ski Resorts</a></li>
-                        <li><a href="{{ url_for('add_skiresort') }}">New Ski Resort</a></li>
-                        <li><a href="{{url_for('sign_out')}}">Sign Out</a></li>  
+                        <li class="active"><a href="{{url_for('trips')}}">Trips</a></li>
+                        <li class="active"><a href="#">New Trip</a></li>
+                        <li class="active"><a href="{{url_for('ski_resorts')}}">Ski Resorts</a></li>
+                        <li class="active"><a href="{{ url_for('add_skiresort') }}">New Ski Resort</a></li>
+                        <li class="active"><a href="{{url_for('sign_out')}}">Sign Out</a></li>  
                     </ul>
                 </div>
             </nav>
