--- a/templates/edit_skiresort.html
+++ b/templates/edit_skiresort.html
@@ -5,41 +5,40 @@
     <div class="card valign-wrapper">
             <div class="card-content grey lighten-4">
                 <div id="new_skiresort" class="card-panel grey lighten-5">
-                    <span class="card-title">NEW SKI RESORT</span>
+                    <span class="card-title">EDIT SKI RESORT</span>
                     <div class="row">
-                        <form action="{{ url_for('insert_skiresort') }}" method="POST" class="col s12">
-                            
+                        <form action="{{ url_for('update_skiresort', skiresort_id=skiresort._id) }}" method="POST" class="col s12">
                                 <div class="input-field col s12 m12 l6">
                                     <i class="small material-icons prefix">account_circle</i>
-                                    <input placeholder="ski resort name" id="location_name" name="location_name" type="text" class="validate" required>
+                                    <input value="{{skiresort.location_name}}" id="location_name" name="location_name" type="text" class="validate" required>
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="small material-icons prefix">description</i>
-                                    <input placeholder="short description" id="description" name="description" type="text" class="validate" required>
+                                    <input value="{{skiresort.description}}" id="description" name="description" type="text" class="validate" required>
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">web</i>
-                                    <input placeholder="website" id="website" name="website" type="url" class="validate" required>
+                                    <input value="{{skiresort.website}}" id="website" name="website" type="url" class="validate" required>
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">map</i>
-                                    <input placeholder="map link" id="map" name="map" type="url" class="validate" required>
+                                    <input value="{{skiresort.map}}" id="map" name="map" type="url" class="validate" required>
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">terrain</i>
-                                    <input placeholder="glacier: yes/no?" id="glacier" name="glacier" type="text" class="validate" required>
+                                    <input value="{{skiresort.glacier}}" id="glacier" name="glacier" type="text" class="validate" required>
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">brightness_3</i>
-                                    <input placeholder="night skiing: yes-no?" id="night" name="night" type="text" class="validate" required>
+                                    <input value="{{skiresort.night}}" id="night" name="night" type="text" class="validate" required>
                                 </div>
                                 <div class="input-field col s12 m12 l12">
                                     <i class="small material-icons prefix">comment</i>
-                                    <input placeholder="additional info" id="other_info" name="other_info" type="text" class="validate" required>
+                                    <input value="{{skiresort.other_info}}" id="other_info" name="other_info" type="text" class="validate" required>
                                 </div>
                                 <div class="input-field col s12 m12 l6">
                                     <i class="material-icons prefix">face</i>
-                                    <select class="icons dropdown-content" id="thumbnail" name="thumbnail" required="" aria-required="true">
+                                    <select value="{{skiresort.thumbnail}}" class="icons dropdown-content" id="thumbnail" name="thumbnail" required="" aria-required="true">
                                         <option value="1" selected>Choose a Thumbnail</option>
                                         <option value="/static/img/resorts_thumbs/mountain01.png" data-icon="/static/img/resorts_thumbs/mountain01.png">Peak</option>
                                         <option value="/static/img/resorts_thumbs/mountain02.png" data-icon="/static/img/resorts_thumbs/mountain02.png">Glacier</option>
@@ -53,7 +52,7 @@
                                         <option value="/static/img/resorts_thumbs/mountain10.png" data-icon="/static/img/resorts_thumbs/mountain10.png">Sunrise</option>
                                     </select>
                                 </div>                            
-                            <button class="btn waves-effect waves-red right" type="submit">Add Ski Resort</button>
+                            <button class="btn waves-effect waves-red right" type="submit">Save Changes</button>
                         </form>
                     </div>
                 </div>
