--- a/templates/trips.html
+++ b/templates/trips.html
@@ -10,8 +10,10 @@
             <tbody>
                 <tr class="collapsible-header col s12 m6 l6 xl6">
                     <td>
-                        <strong>{{trip.user}}</strong>
-                        <div class="avatar-image"><img src="{{trip.user.avatar}}" width="25" height="25"/></div>
+                    {% for user in users %}
+                        <strong>{{session['user']}}</strong>
+                        <div class="avatar-image"><img src="{{user.avatar}}" width="25" height="25"/></div>
+                    {% endfor %}
                     </td>
                     <td>
                         <a href="{{ url_for('ski_resorts')}}"><strong>{{trip.location_name}}</strong></a>
@@ -28,12 +30,22 @@
                         <strong>Kids:</strong>{{trip.kids}}
                     </td>
                     <td>
-                                <span>Ski or Snowboard</span>
+                                <span>{{trip.ski_snowboard}}</span>
                     </td>
                     <td>
                         <strong>Add.info:</strong>{{trip.other_info}}
                     </td>  
-                </tr>               
+                    <td>          
+                        <div class="row">
+                                    <a href="" class="waves-effect waves-light btn-small">
+                                        <i class="material-icons right">playlist_add</i>Edit
+                                    </a>
+                                    <a href="{{url_for('delete_trip', trip_id=trip._id)}}" class="waves-effect waves-light btn-small">
+                                        <i class="material-icons right">delete_forever</i>Delete
+                                    </a>
+                        </div>
+                    </td>
+                </tr>         
             </tbody>
         </table>
         {% endfor %}
