--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -10,60 +10,41 @@
                     <form action="{{ url_for('insert_trip') }}" method="POST" class="col s12">
                         <div class="row">
                             <div class="input-field col s12">
-                                <i class="material-icons prefix">poll</i>
+                                <i class="material-icons prefix">terrain</i>
                                 <select id="skiresort" name="skiresort_name">
                             <option value="" disabled selected>Choose Ski Resort</option>
                             {% for skiresort in skiresorts %}
                                 <option value="{{skiresort.loacation_name}}">{{skiresort.location_name}}</option>
                             {% endfor %}
                             </select>
-                                <label>Ski Resort</label>
                             </div>
                         </div>
                         <div class="input-field col s12 m12 l6">
-                            <i class="small material-icons prefix">account_circle</i>
-                            <input placeholder="ski resort name" id="location_name" name="location_name" type="text" class="validate" required>
+                                <i class="material-icons prefix">today</i>
+                                <input id="from" name="from" type="text" class="datepicker">
+                                <label for="icon_prefix">From:</label>
                         </div>
                         <div class="input-field col s12 m12 l6">
-                            <i class="small material-icons prefix">description</i>
-                            <input placeholder="short description" id="description" name="description" type="text" class="validate" required>
+                                <i class="material-icons prefix">today</i>
+                                <input id="to" name="to" type="text" class="datepicker">
+                                <label for="icon_prefix">To:</label>
                         </div>
                         <div class="input-field col s12 m12 l6">
-                            <i class="material-icons prefix">web</i>
-                                <input placeholder="website" id="website" name="website" type="url" class="validate" required>
+                            <i class="material-icons prefix">supervisor_account</i>
+                            <input placeholder="how many adults?" id="adults" name="adults" type="text" class="validate" required>
                         </div>
                         <div class="input-field col s12 m12 l6">
-                            <i class="material-icons prefix">map</i>
-                            <input placeholder="map link" id="map" name="map" type="url" class="validate" required>
+                            <i class="material-icons prefix">child_care</i>
+                            <input placeholder="how many kids?" id="kids" name="kids" type="text" class="validate" required>
                         </div>
                         <div class="input-field col s12 m12 l6">
-                            <i class="material-icons prefix">terrain</i>
-                            <input placeholder="glacier: yes/no?" id="glacier" name="glacier" type="text" class="validate" required>
-                        </div>
-                        <div class="input-field col s12 m12 l6">
-                            <i class="material-icons prefix">brightness_3</i>
-                            <input placeholder="night skiing: yes-no?" id="night" name="night" type="text" class="validate" required>
+                            <i class="material-icons prefix">ac_unit</i>
+                            <input placeholder="ski or snowboard" id="ski-snowboard" name="ski-snowboard" type="text" class="validate" required>
                         </div>
                         <div class="input-field col s12 m12 l12">
                             <i class="small material-icons prefix">comment</i>
                             <input placeholder="additional info" id="other_info" name="other_info" type="text" class="validate" required>
-                        </div>
-                        <div class="input-field col s12 m12 l6">
-                            <i class="material-icons prefix">face</i>
-                            <select class="icons dropdown-content" id="thumbnail" name="thumbnail" required="" aria-required="true">
-                            <option value="1" selected>Choose a Thumbnail</option>
-                            <option value="/static/img/resorts_thumbs/mountain01.png" data-icon="/static/img/resorts_thumbs/mountain01.png">Peak</option>
-                            <option value="/static/img/resorts_thumbs/mountain02.png" data-icon="/static/img/resorts_thumbs/mountain02.png">Glacier</option>
-                            <option value="/static/img/resorts_thumbs/mountain03.png" data-icon="/static/img/resorts_thumbs/mountain03.png">Map</option>
-                            <option value="/static/img/resorts_thumbs/mountain04.png" data-icon="/static/img/resorts_thumbs/mountain04.png">Slopes</option>
-                            <option value="/static/img/resorts_thumbs/mountain05.png" data-icon="/static/img/resorts_thumbs/mountain05.png">Forest</option>
-                            <option value="/static/img/resorts_thumbs/mountain06.png" data-icon="/static/img/resorts_thumbs/mountain06.png">Skilift</option>
-                            <option value="/static/img/resorts_thumbs/mountain07.png" data-icon="/static/img/resorts_thumbs/mountain07.png">Hut</option>
-                            <option value="/static/img/resorts_thumbs/mountain08.png" data-icon="/static/img/resorts_thumbs/mountain08.png">Cottage</option>
-                            <option value="/static/img/resorts_thumbs/mountain09.png" data-icon="/static/img/resorts_thumbs/mountain09.png">Race</option>
-                            <option value="/static/img/resorts_thumbs/mountain10.png" data-icon="/static/img/resorts_thumbs/mountain10.png">Sunrise</option>
-                            </select>
-                        </div>                            
+                        </div>                   
                         <button class="btn waves-effect waves-red right" type="submit">Add Ski Resort</button>
                     </form>
                 </div>
