--- a/templates/trips.html
+++ b/templates/trips.html
@@ -11,7 +11,7 @@
                 <tr class="collapsible-header col s12 m6 l6 xl6">
                     <td>
                     {% for user in users %}
-                        <strong>{{session['user']}}</strong>
+                        <strong>{{user.session['user']}}</strong>
                         <div class="avatar-image"><img src="{{user.avatar}}" width="25" height="25"/></div>
                     {% endfor %}
                     </td>
