--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,22 @@
 {% extends 'base.html'%} 
 {% block content %}
 
+<div id="intro-cont" class="container">
+    <div id="intro" class="row">
+        <div class="card col s12">
+            <div class="card-panel blue darken-2">
+                <span class="white-text text-darken-2">
+                    <p class="intro-title">START A TEAM OR JOIN ONE</p>
+                    <ul>
+                        <li>Sing Up</li>
+                        <li>Post your trips</li>
+                        <li>Search through trips</li>
+                        <li>Team Up</li>
+                        <li>Have fun on the slopes!</li>
+                    </ul>
+                </span>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
