Fixed some bugs in edit_skiresort.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
         <div class="card col s12">
             <div class="card-panel blue darken-2">
                 <span class="white-text text-darken-2">
-                    <p class="intro-title">START A TEAM OR JOIN ONE</p>
+                    <p class="intro-title">START / JOIN A TEAM</p>
                     <ul>
                         <li>Sing Up</li>
                         <li>Post your trips</li>
