Fixed rendering trips after adding a new trip

--- a/templates/add_trip.html
+++ b/templates/add_trip.html
@@ -39,7 +39,7 @@
                         </div>
                         <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">ac_unit</i>
-                            <input placeholder="ski or snowboard" id="ski-snowboard" name="ski-snowboard" type="text" class="validate" required>
+                            <input placeholder="ski or snowboard" id="ski_snowboard" name="ski_snowboard" type="text" class="validate" required>
                         </div>
                         <div class="input-field col s12 m12 l12">
                             <i class="small material-icons prefix">comment</i>
