--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <div id="intro-cont" class="container">
     <div id="intro" class="row">
-        <div class="card col s12">
+        <div class="card col s12 blue lighten-5">
             <div class="card-panel blue darken-2">
                 <span class="white-text text-darken-2">
                     <p class="intro-title">START / JOIN A TEAM</p>
