Added cancel button to Edit Ski resort page

--- a/templates/edit_skiresort.html
+++ b/templates/edit_skiresort.html
@@ -52,7 +52,8 @@
                                         <option value="/static/img/resorts_thumbs/mountain10.png" data-icon="/static/img/resorts_thumbs/mountain10.png">Sunrise</option>
                                     </select>
                                 </div>                            
-                            <button class="btn waves-effect waves-red right" type="submit">Save Changes</button>
+                            <button class="btn waves-effect right" type="submit">Save Changes</button>
+                            <a href="{{ url_for('ski_resorts') }}" class="btn-small waves-effect right">Cancel</a>
                         </form>
                     </div>
                 </div>
