|Partly changes button colors

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 {% extends 'base.html'%} 
 {% block content %}
 
-<div id="intro-cont" class="container">
-    <div id="intro" class="row">
+<div class="container">
+    <div class="row valign center-align">
         <div class="card col s12 blue lighten-5">
             <div class="card-panel blue darken-2">
                 <span class="white-text text-darken-2">
