--- a/templates/trips.html
+++ b/templates/trips.html
@@ -7,7 +7,7 @@
     <table class="collapsible highlight" data-collapsible="accordion">
         <tbody>
         
-        {% for trip in trips %}
+        {% for trip in trips|sort(reverse=true,attribute="from") %}
 
         <tr class="collapsible-header col s12 m6 l6 xl6">
             <td>
@@ -36,8 +36,8 @@
             </td>  
             <td>          
                 <div class="row">
-                    <a href="{{url_for('edit_trip', trip_id=trip._id)}}" class="btn-small btn-flat">Edit</a>
-                    <a href="{{url_for('delete_trip', trip_id=trip._id)}}" class="waves-effect waves-light btn-small btn-flat">Delete</a>
+                    <a href="{{url_for('edit_trip', trip_id=trip._id)}}" class="blue accent-2 btn-small waves-effect ">Edit</a>
+                    <a href="{{url_for('delete_trip', trip_id=trip._id)}}" class="red lighten-3 btn-small waves-effect waves-light">Delete</a>
                 </div>
             </td>
         </tr>         
