--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -51,7 +51,7 @@
                                     </select>
                                 </div>
                             </div>
-                        <button class="btn waves-effect waves-red right" type="submit">Sign Up</button>
+                        <button class="btn waves-effect right" type="submit">Sign Up</button>
                     </form>
                 </div>
             </div>
