Added ski resorts search

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,9 @@
         <div class="card col s12 blue lighten-5">
             <div class="card-panel blue darken-2">
                 <span class="white-text text-darken-2">
-                    <p class="intro-title">START / JOIN A TEAM</p>
+                    <p class="intro-title">START / JOIN A SNOW TEAM</p>
                     <ul>
-                        <li>Sing Up</li>
+                        <li>Sign Up</li>
                         <li>Post your trips</li>
                         <li>Search through trips</li>
                         <li>Team Up</li>
