--- a/templates/ski_resorts.html
+++ b/templates/ski_resorts.html
@@ -1,6 +1,23 @@
 {% extends 'base.html'%} 
 {% block content %}
 
+<div class="row panel grey lighten-5">
+    <h5 class="center">SEARCH SKI RESORTS</h5> 
+    <form action="{{ url_for('search_ski_resorts') }}" method="post" class="col s12">
+        <div class="row valign-wrapper center-align">
+            <div class="input-field col s12 m6">
+                <i class="small material-icons prefix">search</i>
+                <input type="text" name="query" id="query" class="validate" required>
+            </div>
+            <div class="row col s12 m4">
+                <a href="{{ url_for('ski_resorts') }}" class="red btn text-shadow">Reset</a>
+                <button type="submit" class="light-blue btn text-shadow">
+                <i class="small material-icons prefix">search</i>Search</button>
+            </div>
+        </div>
+    </form>
+</div>
+
 <table>
     <tbody>
     {% for skiresort in skiresorts|sort(attribute="location_name") %}
