--- a/templates/trips.html
+++ b/templates/trips.html
@@ -2,9 +2,9 @@
 {% block content %}
 
 
-<div class="row card-panel grey lighten-5">
+<div class="row panel grey lighten-5">
     <h5 class="center">SEARCH UPCOMING TRIPS</h5> 
-    <form  method="post" class="col s12">
+    <form action="{{ url_for('search_trips') }}" method="post" class="col s12">
         <div class="row valign-wrapper center-align">
             <div class="input-field col s12 m6">
                 <i class="small material-icons prefix">search</i>
@@ -13,7 +13,7 @@
             <div class="row col s12 m4">
                 <a href="{{ url_for('trips') }}" class="red btn text-shadow">Reset</a>
                 <button type="submit" class="light-blue btn text-shadow">
-                <i class="small material-icons prefix">search</i>Search
+                <i class="small material-icons prefix">search</i>Search</button>
             </div>
         </div>
     </form>
