Edit_trip.html bug solved

--- a/templates/add_skiresort.html
+++ b/templates/add_skiresort.html
@@ -30,7 +30,7 @@
                         </div>
                         <div class="input-field col s12 m12 l6">
                             <i class="material-icons prefix">brightness_3</i>
-                            <input placeholder="night skiing: yes-no?" id="night" name="night" type="text" class="validate" required>
+                            <input placeholder="night skiing: yes/no?" id="night" name="night" type="text" class="validate" required>
                         </div>
                         <div class="input-field col s12 m12 l12">
                             <i class="small material-icons prefix">comment</i>
