--- a/templates/ski_resorts.html
+++ b/templates/ski_resorts.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%} 
 {% block content %}
 
-<div class="row panel grey lighten-5">
+<div class="row card-panel">
     <h5 class="center">SEARCH SKI RESORTS</h5> 
     <form action="{{ url_for('search_ski_resorts') }}" method="post" class="col s12">
         <div class="row valign-wrapper center-align">
@@ -73,6 +73,6 @@
         </tr>
     {% endfor %}
     </tbody>
-</table>
+ </table>   
 
 {% endblock %}
