Fixed Testing.md for Gitpages

--- a/templates/ski_resorts.html
+++ b/templates/ski_resorts.html
@@ -36,7 +36,7 @@
                                 <p>{{skiresort.description}}</p>
                             </div>
                         </div>
-                        <div class="card-title col s4 m4 l4">
+                        <div class="col s4 m4 l4">
                             <div class="">
                                 <div class="row">
                                 <p>Night skiing: {{skiresort.night}}</p>
@@ -50,7 +50,7 @@
                                 <a href="{{skiresort.map}}" target="_blank">Map</a>
                             </div>
                         </div>
-                        <div class="card-title col s4 m4 l4">
+                        <div class="col s4 m4 l4">
                             <div class="">
                                 <p>Additional info:</p>
                             </div>
